--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <div id="message" class="message"></div>
     </div>
 
-   <center></center> <footer>© 2025 Universidad UniverMilenium • Todos los derechos reservados</footer></center>
+   <center> <footer>© 2025 Universidad UniverMilenium • Todos los derechos reservados</footer></center>
   </div>
 
   <!-- TU JAVASCRIPT 100% INTACTO (partículas mejoradas incluidas) -->
@@ -342,8 +342,7 @@
       particlesContainer.appendChild(p);
     }
 
-    // Todo tu código JavaScript original (Firebase, validaciones, PWA, etc.) sigue aquí abajo exactamente igual
-    // Lo dejo intacto para que no se pierda nada
+    // PWA FIREBASE
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/users.json";
     const registerForm = document.getElementById("registerForm");
     const loginForm = document.getElementById("loginForm");
