--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sistema de Boletos • Graduación 2025</title>
-
   <!-- PWA Meta Tags -->
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="1.png">
   <meta name="theme-color" content="#003087">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <style>
     :root {
       --azul: #003087;
@@ -22,16 +19,13 @@
       --blanco: #ffffff;
       --negro: #000000;
     }
-
     * { margin: 0; padding: 0; box-sizing: border-box; }
-
     html, body {
       height: 100%;
       width: 100%;
       overflow-x: hidden;
       font-family: 'Poppins', sans-serif;
     }
-
     /* FONDO ANIMADO ÉPICO 1 */
     body {
       background: linear-gradient(135deg, #000000, #001133, #002254);
@@ -43,7 +37,6 @@
       justify-content: center;
       padding: 20px 15px;
     }
-
     /* Capa de ondas animadas (como aurora) */
     .waves {
       position: fixed;
@@ -53,7 +46,6 @@
       animation: waveMove 25s linear infinite;
       z-index: 1;
     }
-
     .waves::before, .waves::after {
       content: '';
       position: absolute;
@@ -63,21 +55,17 @@
       animation: aurora 30s ease infinite;
       opacity: 0.6;
     }
-
     .waves::before { animation-delay: 0s; }
     .waves::after { animation-delay: 15s; }
-
     @keyframes waveMove {
       0% { transform: translateX(-50%); }
       100% { transform: translateX(0%); }
       100% { transform: translateX(-50%); }
     }
-
     @keyframes aurora {
       0%, 100% { transform: translateY(-30%) scale(1.1); opacity: 0.4; }
       50% { transform: translateY(30%) scale(1.3); opacity: 0.7; }
     }
-
     /* Estrellas brillantes flotando */
     .stars {
       position: fixed;
@@ -85,7 +73,6 @@
       pointer-events: none;
       z-index: 2;
     }
-
     .star {
       position: absolute;
       background: white;
@@ -93,19 +80,16 @@
       opacity: 0;
       animation: twinkle 8s infinite ease-in-out;
     }
-
     .star:nth-child(1) { width: 2px; height: 2px; top: 10%; left: 15%; animation-delay: 0s; }
     .star:nth-child(2) { width: 3px; height: 3px; top: 30%; left: 80%; animation-delay: 2s; }
     .star:nth-child(3) { width: 1px; height: 1px; top: 60%; left: 30%; animation-delay: 4s; }
     .star:nth-child(4) { width: 4px; height: 4px; top: 20%; left: 60%; animation-delay: 6s; }
     .star:nth-child(5) { width: 2px; height: 2px; top: 80%; left: 90%; animation-delay: 1s; }
     .star:nth-child(6) { width: 3px; height: 3px; top: 45%; left: 10%; animation-delay: 3s; }
-
     @keyframes twinkle {
       0%, 100% { opacity: 0; transform: scale(0); }
       50% { opacity: 1; transform: scale(1); }
     }
-
     /* Partículas mejoradas (más elegantes) */
     .particles {
       position: fixed;
@@ -113,7 +97,6 @@
       pointer-events: none;
       z-index: 3;
     }
-
     .particle {
       position: absolute;
       background: radial-gradient(circle, rgba(255,255,255,0.8) 0%, transparent 70%);
@@ -121,14 +104,12 @@
       animation: float 20s infinite linear;
       box-shadow: 0 0 15px rgba(255,255,255,0.4);
     }
-
     @keyframes float {
       0% { transform: translateY(100vh) scale(0); opacity: 0; }
       10% { opacity: 1; }
       90% { opacity: 0.7; }
       100% { transform: translateY(-100px) scale(1); opacity: 0; }
     }
-
     /* Contenedor principal 1 */
     .container {
       background: rgba(255, 255, 255, 0.15);
@@ -145,19 +126,16 @@
       z-index: 10;
       animation: appear 1.4s ease-out;
     }
-
     @keyframes appear {
       from { opacity: 0; transform: scale(0.9) translateY(50px); }
       to { opacity: 1; transform: scale(1) translateY(0); }
     }
-
     .header {
       background: linear-gradient(135deg, var(--azul), var(--azul-claro));
       padding: 60px 30px 40px;
       text-align: center;
       color: white;
     }
-
     .logo {
       width: 150px;
       height: auto;
@@ -165,37 +143,30 @@
       filter: drop-shadow(0 6px 15px rgba(0,0,0,0.6));
       animation: logoGlow 6s ease-in-out infinite alternate;
     }
-
     @keyframes logoGlow {
       from { filter: drop-shadow(0 6px 15px rgba(0,0,0,0.6)); }
       to { filter: drop-shadow(0 10px 30px rgba(0, 80, 184, 0.8)); }
     }
-
     .header h1 {
       font-size: clamp(28px, 6vw, 38px);
       font-weight: 700;
       margin-bottom: 8px;
       text-shadow: 0 4px 15px rgba(0,0,0,0.6);
     }
-
     .header p {
       font-size: clamp(15px, 4vw, 18px);
       opacity: 0.95;
       font-weight: 400;
     }
-
     .form-container {
       padding: clamp(30px, 8vw, 50px) clamp(25px, 7vw, 40px);
       background: var(--blanco);
       color: var(--negro);
     }
-
     .form { display: none; animation: fadeIn 0.7s ease-in-out; }
     .form.active { display: block; }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(25px); } to { opacity: 1; transform: translateY(0); } }
-
     h2 { text-align: center; margin-bottom: 35px; font-size: clamp(24px, 6vw, 30px); color: var(--azul); font-weight: 700; }
-
     .input-group { margin-bottom: 22px; position: relative; }
     label { display: block; margin-bottom: 8px; color: #333; font-weight: 600; font-size: clamp(14px, 3.8vw, 16px); }
     input, select {
@@ -214,7 +185,6 @@
       color: #666; font-size: 20px; transition: color 0.3s;
     }
     .password-toggle:hover { color: var(--azul); }
-
     button {
       width: 100%; padding: 17px;
       background: linear-gradient(90deg, var(--azul), var(--azul-claro));
@@ -232,16 +202,40 @@
     }
     button:hover::before { left: 100%; }
     button:hover { transform: translateY(-5px); box-shadow: 0 18px 40px rgba(0, 48, 135, 0.55); }
-
     .switch { text-align: center; margin-top: 30px; color: #555; font-size: clamp(14px, 3.7vw, 15px); }
     .switch a { color: var(--azul); text-decoration: none; font-weight: 700; }
     .switch a:hover { text-decoration: underline; }
-
     .message {
-      { margin-top: 20px; padding: 16px 20px; border-radius: 16px; text-align: center; font-weight: 600; display: none; }
+      margin-top: 20px;
+      padding: 16px 20px;
+      border-radius: 16px;
+      text-align: center;
+      font-weight: 600;
+      display: none;
+      animation: slideDown 0.5s ease;
+    }
+    @keyframes slideDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     .message.success { background: #e8f5e9; color: #2e7d32; }
     .message.error   { background: #ffebee; color: #c62828; }
-
+    .loader {
+      display: none;
+      text-align: center;
+      margin-top: 20px;
+    }
+    .loader::after {
+      content: '';
+      width: 32px;
+      height: 32px;
+      border: 4px solid #f0f0f0;
+      border-top: 4px solid var(--azul);
+      border-radius: 50%;
+      display: inline-block;
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
     footer {
       text-align: center; padding: 25px; color: rgba(255,255,255,0.9);
       font-size: clamp(12px, 3vw, 14px); font-weight: 300;
@@ -250,7 +244,6 @@
   </style>
 </head>
 <body>
-
   <!-- FONDO ANIMADO -->
   <div class="waves"></div>
   <div class="stars">
@@ -262,14 +255,12 @@
     <div class="star"></div>
   </div>
   <div class="particles" id="particles"></div>
-
   <div class="container">
     <div class="header">
       <img src="uni.png" alt="Universidad UniverMilenium" class="logo">
       <h1>Boletos Graduación</h1>
       <p>Sistema oficial 2025</p>
     </div>
-
     <div class="form-container">
       <!-- Registro -->
       <form id="registerForm" class="form active">
@@ -311,21 +302,47 @@
         <div class="loader" id="loaderReg"></div>
         <p class="switch">¿Ya tienes cuenta? <a href="#" id="toLogin">Iniciar sesión</a></p>
       </form>
-
       <!-- Login -->
       <form id="loginForm" class="form">
         <h2>¡Hola de nuevo!</h2>
-        <!-- Todos los campos iguales... -->
-        <!-- (no los repito para no alargar, pero están exactamente como la primer base) -->
+        <div class="input-group">
+          <label>Nombre completo</label>
+          <input type="text" id="loginNombre" placeholder="Ana Laura García López" required />
+        </div>
+        <div class="input-group">
+          <label>Matrícula (solo números)</label>
+          <input type="text" id="loginMatricula" placeholder="2021005678" inputmode="numeric" required />
+        </div>
+        <div class="input-group">
+          <label>Carrera</label>
+          <select id="loginCarrera" required>
+            <option value="">Selecciona tu carrera</option>
+            <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
+            <option value="Ingeniería Industrial">Ingeniería Industrial</option>
+            <option value="Ingeniería Civil">Ingeniería Civil</option>
+            <option value="Arquitectura">Arquitectura</option>
+            <option value="Derecho">Derecho</option>
+            <option value="Medicina">Medicina</option>
+            <option value="Psicología">Psicología</option>
+            <option value="Administración">Administración</option>
+            <option value="Contaduría">Contaduría</option>
+            <option value="Otra">Otra</option>
+          </select>
+        </div>
+        <div class="input-group">
+          <label>Contraseña</label>
+          <input type="password" id="loginPassword" required />
+          <span class="password-toggle" id="toggleLoginPass">Mostrar</span>
+        </div>
+        <button type="submit">Iniciar Sesión</button>
+        <div class="loader" id="loaderLogin"></div>
+        <p class="switch">¿No tienes cuenta? <a href="#" id="toRegister">Regístrate aquí</a></p>
       </form>
-
       <div id="message" class="message"></div>
     </div>
-
    <center> <footer>© 2025 Universidad UniverMilenium • Todos los derechos reservados</footer></center>
   </div>
 
-  <!-- TU JAVASCRIPT 100% INTACTO (partículas mejoradas incluidas) -->
   <script>
     // Partículas mejoradas
     const particlesContainer = document.getElementById('particles');
@@ -354,8 +371,136 @@
       return email.trim().toLowerCase().endsWith("@univermilenium.edu.mx");
     }
 
-    // Registrarse, login, service worker, etc.
+    // MOSTRAR/OCULTAR CONTRASEÑA
+    document.getElementById("toggleRegPass").addEventListener("click", function() {
+      const input = document.getElementById("regPassword");
+      input.type = input.type === "password" ? "text" : "password";
+      this.textContent = input.type === "password" ? "Mostrar" : "Ocultar";
+    });
+    document.getElementById("toggleLoginPass").addEventListener("click", function() {
+      const input = document.getElementById("loginPassword");
+      input.type = input.type === "password" ? "text" : "password";
+      this.textContent = input.type === "password" ? "Mostrar" : "Ocultar";
+    });
 
+    // CAMBIAR ENTRE FORMULARIOS
+    document.getElementById("toLogin").addEventListener("click", e => {
+      e.preventDefault();
+      registerForm.classList.remove("active");
+      setTimeout(() => loginForm.classList.add("active"), 300);
+    });
+    document.getElementById("toRegister").addEventListener("click", e => {
+      e.preventDefault();
+      loginForm.classList.remove("active");
+      setTimeout(() => registerForm.classList.add("active"), 300);
+    });
+
+    // FUNCIÓN PARA MOSTRAR MENSAJES
+    function showMessage(text, type = "error") {
+      messageDiv.textContent = text;
+      messageDiv.className = "message " + type;
+      messageDiv.style.display = "block";
+      setTimeout(() => messageDiv.style.display = "none", 6000);
+    }
+
+    // SOLO NÚMEROS EN MATRÍCULA
+    document.getElementById("regMatricula").addEventListener("input", function() {
+      this.value = this.value.replace(/[^0-9]/g, "");
+    });
+    document.getElementById("loginMatricula").addEventListener("input", function() {
+      this.value = this.value.replace(/[^0-9]/g, "");
+    });
+
+    // OBTENER USUARIOS
+    async function getUsers() {
+      const res = await fetch(DB_URL);
+      if (!res.ok) return null;
+      return await res.json();
+    }
+
+    // REGISTRO
+    registerForm.addEventListener("submit", async e => {
+      e.preventDefault();
+      loaderReg.style.display = "block";
+      const nombre = document.getElementById("regNombre").value.trim();
+      const matricula = document.getElementById("regMatricula").value.trim();
+      const carrera = document.getElementById("regCarrera").value;
+      const email = document.getElementById("regEmail").value.trim().toLowerCase();
+      const password = document.getElementById("regPassword").value;
+
+      if (!nombre || !matricula || !carrera || !email || password.length < 6) {
+        showMessage("Completa todos los campos correctamente");
+        loaderReg.style.display = "none";
+        return;
+      }
+
+      if (!esCorreoValido(email)) {
+        showMessage("Solo se permiten correos @univermilenium.edu.mx");
+        loaderReg.style.display = "none";
+        return;
+      }
+
+      try {
+        const users = await getUsers();
+        if (users && Object.values(users).some(u => u.matricula === matricula)) {
+          showMessage("Esta matrícula ya está registrada");
+          loaderReg.style.display = "none";
+          return;
+        }
+        await fetch(DB_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ nombre, matricula, carrera, email, password, registradoEn: new Date().toISOString() })
+        });
+        showMessage("¡Registro exitoso! Ahora inicia sesión", "success");
+        setTimeout(() => {
+          loginForm.classList.add("active");
+          registerForm.classList.remove("active");
+        }, 1500);
+      } catch (err) {
+        showMessage("Error de conexión");
+      }
+      loaderReg.style.display = "none";
+    });
+
+    // LOGIN
+    loginForm.addEventListener("submit", async e => {
+      e.preventDefault();
+      loaderLogin.style.display = "block";
+      const nombre = document.getElementById("loginNombre").value.trim();
+      const matricula = document.getElementById("loginMatricula").value.trim();
+      const carrera = document.getElementById("loginCarrera").value;
+      const password = document.getElementById("loginPassword").value;
+
+      try {
+        const users = await getUsers();
+        const userEntry = users ? Object.entries(users).find(([_, u]) =>
+          u.matricula === matricula &&
+          u.password === password &&
+          u.nombre.toLowerCase() === nombre.toLowerCase() &&
+          u.carrera === carrera &&
+          esCorreoValido(u.email)
+        ) : null;
+
+        if (userEntry) {
+          const [id, data] = userEntry;
+          localStorage.setItem("currentUserId", id);
+          localStorage.setItem("currentUserNombre", data.nombre);
+          localStorage.setItem("currentUserMatricula", data.matricula);
+          localStorage.setItem("currentUserCarrera", data.carrera);
+          localStorage.setItem("currentUserEmail", data.email || "");
+          showMessage(`¡Bienvenid@, ${data.nombre.split(" ")[0]}!`, "success");
+          setTimeout(() => window.location.href = "index2.html", 1800);
+        } else {
+          showMessage("Datos incorrectos o correo no institucional");
+        }
+      } catch (err) {
+        showMessage("Error de conexión");
+      }
+      loaderLogin.style.display = "none";
+    });
+
+    // Service Worker
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('service-worker.js')
