--- a/index2.html
+++ b/index2.html
@@ -6,23 +6,22 @@
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
-  <meta name="theme-color" content="#c41b2a">
+  <meta name="theme-color" content="#1e3a8a">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-
   <style>
     :root {
-      --red-dark: #8B0000;
-      --red-main: #c41b2a;
-      --gold: #FFD700;
-      --green: #10b981;
+      --blue-dark: #1e3a8a;
+      --blue-main: #3b82f6;
+      --white: #ffffff;
+      --black: #000000;
       --gray: #f1f5f9;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(-45deg, #667eea, #764ba2, #f093fb, #f5576c);
+      background: linear-gradient(-45deg, #e0f2fe, #bfdbfe, #7dd3fc, #3b82f6);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
       min-height: 100vh;
@@ -32,45 +31,106 @@
       align-items: center;
     }
     @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
-
     .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); }
-    .header { background: linear-gradient(135deg, #6366f1, #ec4899); color: white; text-align: center; padding: 40px 20px; }
+    .header {
+      background: linear-gradient(135deg, #1e3a8a, #3b82f6);
+      color: white;
+      text-align: center;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .header img {
+      width: 80px;
+      height: auto;
+      margin-bottom: 10px;
+    }
     .header h1 { font-size: clamp(28px, 6vw, 36px); font-weight: 700; margin-bottom: 8px; }
-    .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: #1e1b4b; }
+    .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: var(--black); }
     .profile { background: var(--gray); padding: 20px; border-radius: 16px; text-align: center; margin-bottom: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
-    .profile h3 { color: var(--red-main); font-size: 24px; margin-bottom: 10px; }
+    .profile h3 { color: var(--blue-main); font-size: 24px; margin-bottom: 10px; }
     .inventory { display: flex; justify-content: space-around; margin-bottom: 30px; text-align: center; }
     .inventory div { background: #f1f5f9; padding: 16px; border-radius: 14px; width: 48%; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .inventory span { font-size: 26px; font-weight: bold; color: #6366f1; }
+    .inventory span { font-size: 26px; font-weight: bold; color: var(--blue-main); }
     .option { background: white; padding: 25px; border-radius: 16px; margin: 20px 0; box-shadow: 0 8px 25px rgba(0,0,0,0.12); transition: transform 0.3s; }
     .option:hover { transform: translateY(-6px); }
-    button { width: 100%; padding: 16px; background: linear-gradient(90deg, #6366f1, #ec4899); color: white; border: none; border-radius: 12px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 15px; transition: all 0.4s; }
-    button:hover { transform: translateY(-4px); box-shadow: 0 15px 30px rgba(99,102,241,0.4); }
-    button.delete { background: #ef4444; }
-    button.ticket { background: #10b981; }
-    .message { margin-top: 20px; padding: 15px; border-radius: 12px; text-align: center; font-weight: 600; display: none; }
-    .message.success { background: #d4edda; color: #10b981; }
-    .message.error { background: #f8d7da; color: #ef4444; }
-
-    select {
-      width: 48%; padding: 14px; margin: 8px 1%; border-radius: 12px; border: 2px solid #ddd; font-size: 16px; background: white;
+    button {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(90deg, var(--blue-dark), var(--blue-main));
+      color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 15px;
+      transition: all 0.4s;
     }
-    #individualTotal { text-align: right; font-size: 24px; font-weight: bold; color: #f59e0b; margin: 20px 0; }
-
-    #ticket { display: none; margin: 30px auto; width: 380px; background: linear-gradient(145deg, #8B0000, #c41b2a); color: white; border-radius: 24px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.6); font-family: 'Bebas Neue', sans-serif; text-align: center; }
-    .ticket-title { background: rgba(0,0,0,0.5); padding: 18px; font-size: 32px; color: #ff6b6b; }
+    button:hover { transform: translateY(-4px); box-shadow: 0 15px 30px rgba(59, 130, 246, 0.4); }
+    button.delete { background: var(--black); }
+    button.ticket { background: var(--blue-main); }
+    .message { margin-top: 20px; padding: 15px; border-radius: 12px; text-align: center; font-weight: 600; display: none; }
+    .message.success { background: #dbeafe; color: var(--blue-dark); }
+    .message.error { background: #f8d7da; color: #ef4444; }
+    select {
+      width: 48%;
+      padding: 14px;
+      margin: 8px 1%;
+      border-radius: 12px;
+      border: 2px solid #ddd;
+      font-size: 16px;
+      background: white;
+    }
+    #individualTotal { text-align: right; font-size: 24px; font-weight: bold; color: var(--blue-main); margin: 20px 0; }
+    #ticket {
+      display: none;
+      margin: 30px auto;
+      width: 380px;
+      background: linear-gradient(145deg, var(--blue-dark), var(--blue-main));
+      color: white;
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.6);
+      font-family: 'Bebas Neue', sans-serif;
+      text-align: center;
+    }
+    .ticket-title {
+      background: rgba(0,0,0,0.5);
+      padding: 18px;
+      font-size: 32px;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+    .ticket-title img {
+      width: 40px;
+      height: auto;
+    }
     .qr-container { background: white; margin: 25px auto; padding: 20px; width: 220px; height: 220px; border-radius: 18px; }
     #qrCode { width: 180px; height: 180px; margin: 0 auto; }
-    .ticket-code { font-size: 36px; color: var(--gold); letter-spacing: 6px; margin: 20px 0; }
+    .ticket-code { font-size: 36px; color: var(--white); letter-spacing: 6px; margin: 20px 0; }
     .info-row { display: flex; justify-content: space-between; padding: 8px 30px; border-bottom: 1px dashed rgba(255,255,255,0.4); font-size: 17px; }
     .footer-note { background: rgba(0,0,0,0.4); padding: 18px; font-size: 15px; margin-top: 20px; border-top: 2px dashed rgba(255,255,255,0.3); }
-
     .download-btn, #backButton {
-      display: block; margin: 20px auto; padding: 16px 40px; background: var(--gold); color: black; border: none; border-radius: 50px; font-weight: bold; font-size: 18px; cursor: pointer; width: fit-content;
+      display: block;
+      margin: 20px auto;
+      padding: 16px 40px;
+      background: var(--white);
+      color: var(--blue-dark);
+      border: none;
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 18px;
+      cursor: pointer;
+      width: fit-content;
     }
-    #backButton { background: white; color: #c41b2a; border: 2px solid #c41b2a; }
-    #backButton:hover { background: #c41b2a; color: white; }
-
+    #backButton { background: white; color: var(--blue-main); border: 2px solid var(--blue-main); }
+    #backButton:hover { background: var(--blue-main); color: white; }
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
       #ticket { width: 95%; }
@@ -80,40 +140,35 @@
   </style>
 </head>
 <body>
-
   <div class="container">
     <div class="header">
+      <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
       <h1>Graduación 2025</h1>
       <p id="welcome">Cargando...</p>
     </div>
-
     <div class="content" id="mainContent">
+      <!-- El resto del contenido HTML sigue igual -->
       <div class="profile">
         <h3 id="userName">Axel</h3>
         <p>Mis boletos comprados</p>
       </div>
-
       <div class="inventory">
         <div><h3>Boletos Cena</h3><span id="dinnerAvailable">200</span></div>
         <div><h3>Boletos Ceremonia</h3><span id="ceremonyAvailable">200</span></div>
       </div>
-
       <div id="myPurchases">
-        <div style="background:#fef3cd;padding:20px;border-radius:12px;text-align:center;">
+        <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
           <p>Cargando tus compras...</p>
         </div>
       </div>
-
       <div class="option">
         <h3>Paquete Completo • $3,000 MXN</h3>
         <p>2 boletos de cena + 2 de ceremonia</p>
         <button id="buyPackage">Comprar Paquete</button>
       </div>
-
       <div class="option">
         <h3>Boletos Individuales</h3>
         <p>Cena: <strong>$1,000</strong> c/u • Ceremonia: <strong>$150</strong> c/u</p>
-        
         <select id="qtyDinner">
           <option value="0">Cena: 0</option>
           <option value="1">Cena: 1 ($1,000)</option>
@@ -127,7 +182,6 @@
           <option value="9">Cena: 9 ($9,000)</option>
           <option value="10">Cena: 10 ($10,000)</option>
         </select>
-        
         <select id="qtyCeremony">
           <option value="0">Ceremonia: 0</option>
           <option value="1">Ceremonia: 1 ($150)</option>
@@ -136,19 +190,18 @@
           <option value="4">Ceremonia: 4 ($600)</option>
           <option value="5">Ceremonia: 5 ($750)</option>
         </select>
-
         <div id="individualTotal">Total: $0 MXN</div>
         <button id="buyIndividual">Comprar Individuales</button>
       </div>
-
       <button class="ticket" id="goToTicket" style="display:none;">Ir a mi Ticket</button>
       <button class="delete" id="deleteLast" style="display:none;">Eliminar última compra</button>
-
       <div id="message" class="message"></div>
     </div>
-
     <div id="ticket">
-      <div class="ticket-title">GRADUACIÓN 2025</div>
+      <div class="ticket-title">
+        <img src="https://mistralaiblackforestprod.blob.core.windows.net/images/blackforest/2e61/1938/-b56/9-4269-892b-902473a48c31/image.jpg?se=2025-12-10T16%3A32%3A54Z&sp=r&sv=2025-01-05&sr=b&sig=fcyHAsqkTsb9UNy4VisNFl96ssxVxRzJj1UCUY0SbNw%3D" alt="Universidad UNIVER MILENIUM Logo">
+        GRADUACIÓN 2025
+      </div>
       <div class="qr-container"><canvas id="qrCode"></canvas></div>
       <div class="ticket-code" id="ticketCode">XXXXXXXXX</div>
       <div class="ticket-info">
@@ -166,68 +219,54 @@
       <button id="backButton">Regresar</button>
     </div>
   </div>
-
   <script>
+    // El script JavaScript sigue exactamente igual
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
-
     document.getElementById('welcome').textContent = `Hola, ${userNombre.split(' ')[0]}`;
     document.getElementById('userName').textContent = userNombre;
-
     if (!userId) {
       alert('Debes iniciar sesión');
       window.location.href = 'index.html';
     }
-
     const DB_URL = "https://boletos-66dac-default-rtdb.firebaseio.com/";
     const INVENTORY_URL = DB_URL + "inventory.json";
-    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`; // Esta es la clave
-
+    const PURCHASES_URL = DB_URL + `users/${userId}/purchases.json`;
     let compras = [];
     let totalCena = 0;
     let totalCeremonia = 0;
-
     function calculateTotal() {
       const cena = parseInt(document.getElementById('qtyDinner').value) || 0;
       const ceremonia = parseInt(document.getElementById('qtyCeremony').value) || 0;
       const total = cena * 1000 + ceremonia * 150;
       document.getElementById('individualTotal').textContent = `Total: $${total.toLocaleString('es-MX')} MXN`;
     }
-
     document.getElementById('qtyDinner').addEventListener('change', calculateTotal);
     document.getElementById('qtyCeremony').addEventListener('change', calculateTotal);
-
     async function loadData() {
       try {
         const [invRes, purRes] = await Promise.all([
           fetch(INVENTORY_URL),
           fetch(PURCHASES_URL)
         ]);
-
         const inventory = await invRes.json() || {dinner: 200, ceremony: 200};
         const data = await purRes.json();
-
         document.getElementById('dinnerAvailable').textContent = inventory.dinner || 200;
         document.getElementById('ceremonyAvailable').textContent = inventory.ceremony || 200;
-
-        // Limpiar variables
         compras = [];
         totalCena = 0;
         totalCeremonia = 0;
-
         if (data && typeof data === 'object') {
           compras = Object.entries(data).map(([id, c]) => ({id, ...c}));
           totalCena = compras.reduce((sum, c) => sum + (c.cena || 0), 0);
           totalCeremonia = compras.reduce((sum, c) => sum + (c.ceremonia || 0), 0);
-
           document.getElementById('myPurchases').innerHTML = `
-            <div style="background:#d4edda;padding:20px;border-radius:12px;text-align:center;">
-              <h3 style="color:#10b981;">¡Ya tienes boletos!</h3>
+            <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
+              <h3 style="color:#1e3a8a;">¡Ya tienes boletos!</h3>
               <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
             </div>
           `;
-
           document.getElementById('goToTicket').style.display = 'block';
           document.getElementById('deleteLast').style.display = 'block';
         } else {
@@ -244,22 +283,16 @@
         showMessage("Error de conexión. Intenta de nuevo.", "error");
       }
     }
-
     async function comprar(cena, ceremonia, total) {
       try {
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
         const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
-
-        // Guardar compra
         const res = await fetch(PURCHASES_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(compra)
         });
-
         if (!res.ok) throw new Error("Error al guardar compra");
-
-        // Actualizar inventario
         const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
         await fetch(INVENTORY_URL, {
           method: 'PATCH',
@@ -268,21 +301,16 @@
             ceremony: (inv.ceremony || 200) - ceremonia
           })
         });
-
-        // Recargar todo
         await loadData();
         showMessage('¡Compra realizada con éxito!', 'success');
-
         document.getElementById('qtyDinner').value = 0;
         document.getElementById('qtyCeremony').value = 0;
         calculateTotal();
-
       } catch (err) {
         console.error(err);
         showMessage('Error al procesar la compra. Intenta de nuevo.', 'error');
       }
     }
-
     document.getElementById('buyPackage').onclick = () => comprar(2, 2, 3000);
     document.getElementById('buyIndividual').onclick = () => {
       const d = parseInt(document.getElementById('qtyDinner').value) || 0;
@@ -290,18 +318,15 @@
       if (d + c === 0) return showMessage('Selecciona al menos un boleto', 'error');
       comprar(d, c, d*1000 + c*150);
     };
-
     document.getElementById('goToTicket').onclick = () => {
       if (compras.length > 0) mostrarTicket(compras[compras.length - 1]);
     };
-
     document.getElementById('backButton').onclick = () => {
       document.getElementById('ticket').style.display = 'none';
       document.getElementById('mainContent').style.display = 'block';
       document.getElementById('downloadTicket').style.display = 'none';
       document.getElementById('backButton').style.display = 'none';
     };
-
     document.getElementById('deleteLast').onclick = async () => {
       if (!confirm('¿Eliminar última compra?')) return;
       const ultima = compras[compras.length - 1];
@@ -314,27 +339,22 @@
       await loadData();
       showMessage('Compra eliminada', 'success');
     };
-
     function mostrarTicket(compra) {
       const fecha = new Date(compra.fecha).toLocaleDateString('es-MX');
       const hora = new Date(compra.fecha).toLocaleTimeString('es-MX', {hour: '2-digit', minute: '2-digit'});
-
       document.getElementById('ticketNombre').textContent = userNombre;
       document.getElementById('ticketMatricula').textContent = userMatricula;
       document.getElementById('ticketFecha').textContent = fecha;
       document.getElementById('ticketHora').textContent = hora;
       document.getElementById('ticketBoletos').textContent = `${totalCena} Cena + ${totalCeremonia} Ceremonia`;
       document.getElementById('ticketCode').textContent = compra.codigo;
-
       document.getElementById('mainContent').style.display = 'none';
       document.getElementById('ticket').style.display = 'block';
       document.getElementById('downloadTicket').style.display = 'block';
       document.getElementById('backButton').style.display = 'block';
-
       const url = `https://ax2004-2003.github.io/Boletos/verificar.html?mat=${userMatricula}&code=${compra.codigo}`;
       QRCode.toCanvas(document.getElementById('qrCode'), url, { width: 180 });
     }
-
     document.getElementById('downloadTicket').onclick = () => {
       html2canvas(document.getElementById('ticket'), { scale: 2 }).then(c => {
         const a = document.createElement('a');
@@ -343,7 +363,6 @@
         a.click();
       });
     };
-
     function showMessage(text, type = 'error') {
       const msg = document.getElementById('message');
       msg.textContent = text;
@@ -351,11 +370,8 @@
       msg.style.display = 'block';
       setTimeout(() => msg.style.display = 'none', 4000);
     }
-
-    // INICIALIZACIÓN
     calculateTotal();
     loadData();
-
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').catch(() => {});
     }
