--- a/verificar.html
+++ b/verificar.html
@@ -160,7 +160,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://mistralaiblackforestprod.blob.core.windows.net/images/blackforest/f84c/9984/-419/5-4581-a412-1c596b236ef8/image.jpg?se=2025-12-10T16%3A48%3A02Z&sp=r&sv=2025-01-05&sr=b&sig=Wn%2BCWpmaGcpiVEpiw%2BT3qLzBorPuNdbN9iwQidKeYrw%3D" alt="Universidad UNIVER MILENIUM Logo">
+      <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
       <h1>GRADUACIÓN 2025</h1>
       <p>Verificación Oficial de Boletos</p>
     </div>
