--- a/lista-alumnos.html
+++ b/lista-alumnos.html
@@ -224,16 +224,16 @@
         <label for="carreraSelect">Selecciona una carrera:</label>
         <select id="carreraSelect">
           <option value="">-- Elige una carrera --</option>
-          <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
-          <option value="Ingeniería Industrial">Ingeniería Industrial</option>
-          <option value="Ingeniería Civil">Ingeniería Civil</option>
-          <option value="Arquitectura">Arquitectura</option>
-          <option value="Derecho">Derecho</option>
-          <option value="Medicina">Medicina</option>
-          <option value="Psicología">Psicología</option>
-          <option value="Administración">Administración</option>
-          <option value="Contaduría">Contaduría</option>
-          <option value="Otra">Otra</option>
+         <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
+            <option value="Ingeniería Industrial">Pedagogía</option>
+            <option value="Ingeniería Civil">Administración de Empresas</option>
+            <option value="Arquitectura">Comunicación</option>
+            <option value="Derecho">Derecho</option>
+            <option value="Medicina">Comercio Internacional y Aduanas</option>
+            <option value="Psicología">Psicología</option>
+            <option value="Administración">Mercadoctenia</option>
+            <option value="Contaduría">Contaduría</option>
+            <option value="Otra">Otra</option>
         </select>
       </div>
 
@@ -345,3 +345,4 @@
   </script>
 </body>
 </html>
+
