--- a/index2.html
+++ b/index2.html
@@ -199,7 +199,7 @@
     </div>
     <div id="ticket">
       <div class="ticket-title">
-        <img src="https://mistralaiblackforestprod.blob.core.windows.net/images/blackforest/2e61/1938/-b56/9-4269-892b-902473a48c31/image.jpg?se=2025-12-10T16%3A32%3A54Z&sp=r&sv=2025-01-05&sr=b&sig=fcyHAsqkTsb9UNy4VisNFl96ssxVxRzJj1UCUY0SbNw%3D" alt="Universidad UNIVER MILENIUM Logo">
+        <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
         GRADUACIÓN 2025
       </div>
       <div class="qr-container"><canvas id="qrCode"></canvas></div>
