--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       justify-content: center;
       padding: 20px 15px;
     }
-    /* Capa de ondas animadas (como aurora) */
+    /* Capa de ondas animadas (como aurora boreal) */
     .waves {
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
@@ -90,7 +90,7 @@
       0%, 100% { opacity: 0; transform: scale(0); }
       50% { opacity: 1; transform: scale(1); }
     }
-    /* Partículas mejoradas (más elegantes) */
+    /* Partículas mejoradas (más elegantes ex Iu.verse) */
     .particles {
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
@@ -244,7 +244,7 @@
   </style>
 </head>
 <body>
-  <!-- FONDO ANIMADO -->
+  <!-- FONDO ANIMADO ESTELLA PARTICULA-BURBUJAS -->
   <div class="waves"></div>
   <div class="stars">
     <div class="star"></div>
@@ -340,7 +340,7 @@
       </form>
       <div id="message" class="message"></div>
     </div>
-   <center> <footer>© 2025 Universidad UniverMilenium • Todos los derechos reservados</footer></center>
+   <center> <footer>© 2025 Universidad UniverMilenium Cuautitlán• Todos los derechos reservados</footer></center>
   </div>
 
   <script>
@@ -500,7 +500,7 @@
       loaderLogin.style.display = "none";
     });
 
-    // Service Worker
+    // Service Worker + Github
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('service-worker.js')
