--- a/index2.html
+++ b/index2.html
@@ -220,7 +220,7 @@
     </div>
   </div>
   <script>
-    // El script JavaScript sigue exactamente igual
+    // El script Rescata los valores de Firebase
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
