--- a/verificar.html
+++ b/verificar.html
@@ -242,7 +242,7 @@
           <div class="official-stamp">ACCESO PERMITIDO</div>
         `;
 
-        // REDIRECCIÓN AUTOMÁTICA DESPUÉS DE 15 SEGUNDOS
+        // REDIRECCIÓN AUTOMÁTICA DESPUÉS DE 15 SEGUNDOS TIMMER
         let segundos = 15;
         const contador = setInterval(() => {
           segundos--;
