--- a/index.html
+++ b/index.html
@@ -316,15 +316,15 @@
         <div class="input-group">
           <label>Carrera</label>
           <select id="loginCarrera" required>
-            <option value="">Selecciona tu carrera</option>
+       <option value="">Selecciona tu carrera</option>
             <option value="Ingeniería en Sistemas">Ingeniería en Sistemas</option>
-            <option value="Ingeniería Industrial">Ingeniería Industrial</option>
-            <option value="Ingeniería Civil">Ingeniería Civil</option>
-            <option value="Arquitectura">Arquitectura</option>
+            <option value="Ingeniería Industrial">Pedagogía</option>
+            <option value="Ingeniería Civil">Administración de Empresas</option>
+            <option value="Arquitectura">Comunicación</option>
             <option value="Derecho">Derecho</option>
-            <option value="Medicina">Medicina</option>
+            <option value="Medicina">Comercio Internacional y Aduanas</option>
             <option value="Psicología">Psicología</option>
-            <option value="Administración">Administración</option>
+            <option value="Administración">Mercadoctenia</option>
             <option value="Contaduría">Contaduría</option>
             <option value="Otra">Otra</option>
           </select>
